--- a/NexTransfer/src/main/webapp/WEB-INF/web.xml
+++ b/NexTransfer/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <display-name>NexTransfer</display-name>
   <servlet>
     <servlet-name>nextransfer</servlet-name>
     <servlet-class>
@@ -14,7 +12,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
     </init-param>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>com.nextransfer.springconfig</param-value>
+      <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
     </init-param>
   </servlet>
 
